@@ -1,3 +1,7 @@
+Wed Mar 12 08:53:48 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* man/po4a/Makefile.am (update-po): New target.
+
 Wed Mar 12 08:53:32 GMT 2008  Robert Luberda  <robert@debian.org>
 
 	* man/man1/apropos.man1 (OPTIONS, FILES), man/man1/man.man1
